Fix width on collapsed sidebar

--- a/src/css/ui/components/sidebar.css
+++ b/src/css/ui/components/sidebar.css
@@ -1,6 +1,9 @@
 .sidebar {
-  /* @color-todo @inverse */
+  /* defaults, overwritten by ui.css and page-layout.css */
   --c-height_sidebar: 100vh;
+  --c-width_sidebar: 17rem;
+
+  /* @color-todo @inverse */
   --color-sidebar-fg: var(--color-gray-lighten-50);
   --color-sidebar-fg-em: var(--color-gray-lighten-100);
   --color-sidebar-bg: var(--color-gray-darken-20);
@@ -159,6 +162,7 @@
 }
 
 .sidebar .sidebar-header {
+  width: var(--c-width_sidebar);
   padding: 1.5rem 1.5rem 0 1.5rem;
   display: flex;
   flex-direction: column;
@@ -197,6 +201,7 @@
 }
 
 .sidebar .sidebar-footer {
+  width: var(--c-width_sidebar);
   margin-top: auto;
   padding: 1.5rem 0;
   display: flex;
